--- a/css.css
+++ b/css.css
@@ -1,7 +1,8 @@
 body {
   font-family:Helvetica,Arial,sans-serif;
-  background-color:#FAEBD7;
+  background-color:#f3ede7;
   color:#000;
+  height: 100%;
 }
 /* cyrillic-ext */
 @font-face {
