ANOTHER new idea, color changed

--- a/self.css
+++ b/self.css
@@ -1,8 +1,8 @@
 html{
     padding-left: 10%;
     padding-right: 10%;
-    background-color: blanchedalmond;
-    color:#555;
+    background-color: black;
+    color:lightgray;
     font-size:100%;
  }
 
